// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectsReducer Adds a new project correctly 1`] = `
Object {
  "67890": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project 2",
    "samples": Array [],
    "uuid": "67890",
  },
  "asd123": Object {
    "createdDate": "01-01-2021",
    "description": "This is another test description :)",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
    "67890",
  ],
  "meta": Object {
    "activeProject": "67890",
  },
}
`;

exports[`projectsReducer Inserts a new project correctly 1`] = `
Object {
  "asd123": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
  ],
  "meta": Object {
    "activeProject": "asd123",
  },
}
`;

exports[`projectsReducer Sets an active project correctly 1`] = `
Object {
  "67890": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project 2",
    "samples": Array [],
    "uuid": "67890",
  },
  "asd123": Object {
    "createdDate": "01-01-2021",
    "description": "This is another test description :)",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "01-01-2021",
    "name": "test project",
    "samples": Array [],
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
    "67890",
  ],
  "meta": Object {
    "activeProject": "67890",
  },
}
`;

exports[`projectsReducer Updates a project correctly 1`] = `
Object {
  "asd123": Object {
    "createdDate": "01-01-2021",
    "description": "this is a test description",
    "experiments": Array [],
    "lastAnalyzed": null,
    "lastModified": "02-01-2021",
    "name": "updated name",
    "samples": Array [],
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
  ],
  "meta": Object {
    "activeProject": "asd123",
  },
}
`;
